--- a/index.html
+++ b/index.html
@@ -487,6 +487,39 @@ section.catalog h2{max-width:1100px; margin:10px auto 12px; padding:0 4px;}
 
 </section>
 
+  <section id="managers" class="catalog">
+  <h2>Trade Managers &amp; Utilities</h2>
+  <div class="grid3">
+
+    <div class="card">
+      <h3>AP ATR Trail Manager PRO (MT5)</h3>
+      <div class="tags">
+        <span class="tag">Manager</span>
+        <span class="tag">ATR</span>
+        <span class="tag">MT5</span>
+      </div>
+      <p>
+        Utility EA that manages existing positions only. ATR trailing stop, breakeven,
+        one partial, time-tighten, symbol/magic filters, and optional daily equity guard.
+      </p>
+
+      <div class="btns">
+        <a class="btn"
+           href="https://buy.stripe.com/YOUR_ATR_MANAGER_LINK_HERE"
+           target="_blank" rel="noopener">
+          Buy Now (MT5)
+        </a>
+        <a class="btn ghost"
+           href="./AP%20ATR%20Trail%20Manager%20PRO/"
+           target="_blank" rel="noopener">
+          Docs
+        </a>
+      </div>
+    </div>
+
+  </div>
+</section>
+  
 <section id="indicators" class="catalog">
   <h2>Indicators</h2>
   <div class="grid3">
