--- a/AP ATR Trail Manager PRO/index.html
+++ b/AP ATR Trail Manager PRO/index.html
@@ -106,12 +106,15 @@
     </p>
 
     <div class="pillbar">
-      <!-- replace href with your real checkout link when ready -->
-      <a class="pill" href="#" target="_blank" rel="noopener">Buy Now (MT5)</a>
-      <a class="pill ghost" href="./Quick%20Start.md" target="_blank" rel="noopener">Quick Start</a>
-      <a class="pill ghost" href="#inputs">Inputs</a>
-      <a class="pill ghost" href="#version">Version</a>
-    </div>
+  <a class="pill"
+     href="https://buy.stripe.com/bJeeVfgGA9oD6mn4zxdjO05"
+     target="_blank" rel="noopener">
+    Buy Now
+  </a>
+  <a class="pill ghost" href="#quickstart">Quick Start</a>
+  <a class="pill ghost" href="#inputs">Inputs</a>
+  <a class="pill ghost" href="#version">Version</a>
+</div>
 
     <div class="panel">
       <h3>What it does</h3>
