--- a/index.html
+++ b/index.html
@@ -599,42 +599,59 @@ section.catalog h2{max-width:1100px; margin:10px auto 12px; padding:0 4px;}
 
 <section id="utilities" class="catalog">
   <h2>Utilities &amp; Risk</h2>
-  <div class="grid3">
-  <div class="card">
-        <h3>AP Trade Manager (Lite)</h3>
-        <div class="tags"><span class="tag">Utility</span><span class="tag">Manager</span></div>
-        <p>Compact trade manager with break-even, partials, and quick-close actions.</p>
-        <div class="btns">
-          <a class="btn" href="https://www.mql5.com/en/market/product/148619" target="_blank" rel="noopener">Get on MQL5</a>
-          <a class="btn ghost" href="./AP%20Trade%20Manager/" target="_blank" rel="noopener">Docs</a>
-        </div>
-      </div>
 
-<section id="managers" class="catalog">
   <div class="grid3">
-        <div class="card">
-        <h3>AP Trade Assistant (MT5)</h3>
-        <div class="tags">
-          <span class="tag">Utility</span><span class="tag">Assistant</span><span class="tag">MT5</span>
-        </div>
-        <p>
-          Automated trade assistant with clear risk controls and streamlined order management.
-        </p>
-          <div class="btns">
-    <a class="btn"
-       href="https://buy.stripe.com/7sY14paic44jfWX7LJdjO03"
-       target="_blank" rel="noopener">
-      Buy Now (MT5)
-    </a>
-    <a class="btn ghost"
-       href="/AP%20Trade%20Assistant%20MT5/"
-       target="_blank" rel="noopener">
-      Docs
-    </a>
-  </div>      
-  </section>
-          
-<div class="card">
+    <!-- AP Trade Manager (Lite) -->
+    <div class="card">
+      <h3>AP Trade Manager (Lite)</h3>
+      <div class="tags">
+        <span class="tag">Utility</span>
+        <span class="tag">Manager</span>
+      </div>
+      <p>
+        Compact trade manager with break-even, partials, and quick-close actions.
+      </p>
+      <div class="btns">
+        <a class="btn"
+           href="https://www.mql5.com/en/market/product/148619"
+           target="_blank" rel="noopener">
+          Get on MQL5
+        </a>
+        <a class="btn ghost"
+           href="./AP%20Trade%20Manager/"
+           target="_blank" rel="noopener">
+          Docs
+        </a>
+      </div>
+    </div>
+
+    <!-- AP Trade Assistant (MT5) -->
+    <div class="card">
+      <h3>AP Trade Assistant (MT5)</h3>
+      <div class="tags">
+        <span class="tag">Utility</span>
+        <span class="tag">Assistant</span>
+        <span class="tag">MT5</span>
+      </div>
+      <p>
+        Automated trade assistant with clear risk controls and streamlined order management.
+      </p>
+      <div class="btns">
+        <a class="btn"
+           href="https://buy.stripe.com/7sY14paic44jfWX7LJdjO03"
+           target="_blank" rel="noopener">
+          Buy Now (MT5)
+        </a>
+        <a class="btn ghost"
+           href="/AP%20Trade%20Assistant%20MT5/"
+           target="_blank" rel="noopener">
+          Docs
+        </a>
+      </div>
+    </div>
+
+    <!-- AP ATR Trail Manager PRO (MT5) -->
+    <div class="card">
       <h3>AP ATR Trail Manager PRO (MT5)</h3>
       <div class="tags">
         <span class="tag">Manager</span>
@@ -645,7 +662,6 @@ section.catalog h2{max-width:1100px; margin:10px auto 12px; padding:0 4px;}
         Utility EA that manages existing positions only. ATR trailing stop, breakeven,
         one partial, time-tighten, symbol/magic filters, and optional daily equity guard.
       </p>
-
       <div class="btns">
         <a class="btn"
            href="https://buy.stripe.com/bJeeVfgGA9oD6mn4zxdjO05"
@@ -659,9 +675,9 @@ section.catalog h2{max-width:1100px; margin:10px auto 12px; padding:0 4px;}
         </a>
       </div>
     </div>
-
   </div>
 </section>
+
 
 <section id="levels" class="catalog">
   <h2>Levels &amp; Context</h2>
