--- a/index.html
+++ b/index.html
@@ -429,15 +429,29 @@ section.catalog h2{max-width:1100px; margin:10px auto 12px; padding:0 4px;}
       </div>
     
     <div class="card">
-       <h3>AP BTC Spread Radar MT5</h3>
-       <div class="tags"><span class="tag">Indicator</span><span class="tag">BTC</span><span class="tag">Spread</span></div>
-       <p>Shows live spread (pts) with an MA baseline — quick broker/volatility check before trading.</p>
-       <div class="btns">
-         <a class="btn" href="https://www.mql5.com/en/market/product/149065" target="_blank" rel="noopener">Get on MQL5</a>
-         <a class="btn ghost" href="./AP%20BTC%20Spread%20Radar%20MT5/" target="_blank" rel="noopener">Docs</a>
-       </div>
-     </div>
-    </div>
+  <h3>AP BTC Spread Radar MT5</h3>
+  <div class="tags">
+    <span class="tag">Indicator</span>
+    <span class="tag">BTC</span>
+    <span class="tag">Spread</span>
+  </div>
+  <p>
+    Shows live spread (pts) with an MA baseline —
+    quick broker/volatility check before trading.
+  </p>
+  <div class="btns">
+    <a class="btn"
+       href="./AP%20BTC%20Spread%20Radar%20MT5/AP_BTC_Spread_Radar_MT5.zip"
+       download>
+      Download Free
+    </a>
+    <a class="btn ghost"
+       href="./AP%20BTC%20Spread%20Radar%20MT5/"
+       target="_blank" rel="noopener">
+      Docs
+    </a>
+  </div>
+</div>
 </section>
 
 <section id="metals" class="catalog">
