--- a/AP BTC Spread Radar MT5/index.html
+++ b/AP BTC Spread Radar MT5/index.html
@@ -20,6 +20,39 @@
     ul{margin:8px 0 0 18px}
     small,.muted{color:var(--muted)}
     hr{border:none;border-top:1px solid #1d2633;margin:22px 0}
+
+    .small{font-size:13px}
+
+    .dl-form{
+      display:flex;
+      flex-wrap:wrap;
+      gap:10px;
+      margin:10px 0 4px;
+    }
+    .dl-form input[type="email"]{
+      flex:1 1 190px;
+      min-width:0;
+      padding:8px 10px;
+      border-radius:8px;
+      border:1px solid #1d2633;
+      background:#0e141d;
+      color:var(--text);
+    }
+    .dl-form button{
+      border:none;
+      cursor:pointer;
+    }
+    .sr-only{
+      position:absolute;
+      width:1px;
+      height:1px;
+      padding:0;
+      margin:-1px;
+      overflow:hidden;
+      clip:rect(0,0,0,0);
+      white-space:nowrap;
+      border:0;
+    }
   </style>
 </head>
 <body>
@@ -31,11 +64,29 @@
     Lightweight, BTC-friendly, and useful for checking broker conditions before trading.
   </p>
 
-  <div class="btns">
-    <!-- zip file lives in this folder -->
-    <a class="btn" href="./AP_BTC_Spread_Radar_MT5.zip" download>Download Free (MT5)</a>
-    <a class="ghost btn" href="Quick_Start.md" target="_blank" rel="noopener">Quick Start</a>
-    <a class="ghost btn" href="Pinned_Comment.txt" target="_blank" rel="noopener">Pinned Comment</a>
+  <!-- Email gate card -->
+  <div class="card">
+    <h2>Get AP BTC Spread Radar (free)</h2>
+    <p>Enter your email and click the button to unlock the download link.</p>
+
+    <form class="dl-form" id="btc-download-form">
+      <label for="btc-email" class="sr-only">Email</label>
+      <input type="email"
+             id="btc-email"
+             name="email"
+             required
+             placeholder="you@example.com">
+      <input type="hidden" name="product" value="AP BTC Spread Radar (MT5)">
+      <button type="submit" class="btn">Get free download</button>
+    </form>
+
+    <p id="btc-download-link"
+       class="muted small"
+       style="display:none;margin-top:8px;">
+      Download: <a href="./AP_BTC_Spread_Radar_MT5.zip" download>AP_BTC_Spread_Radar_MT5.zip</a><br>
+      Extras: <a href="Quick_Start.md" target="_blank" rel="noopener">Quick Start</a> ·
+      <a href="Pinned_Comment.txt" target="_blank" rel="noopener">Pinned Comment</a>
+    </p>
   </div>
 
   <div class="card">
@@ -87,6 +138,40 @@
     Support: use the contact options on the AP Trading Tools website if you need help or presets.
   </p>
 </div>
+
+<script>
+  (function () {
+    var form  = document.getElementById('btc-download-form');
+    var linkP = document.getElementById('btc-download-link');
+    if (!form || !linkP) return;
+
+    form.addEventListener('submit', function (e) {
+      e.preventDefault();
+
+      var emailInput = form.querySelector('input[type="email"]');
+      if (!emailInput) return;
+      var email = (emailInput.value || '').trim();
+      if (!email) return;
+
+      var data = new FormData(form);
+
+      fetch('https://formspree.io/f/xkgkrzye', {
+        method: 'POST',
+        body: data,
+        headers: { 'Accept': 'application/json' }
+      }).then(function () {
+        linkP.style.display = 'block';
+        var btn = form.querySelector('button[type="submit"]');
+        if (btn) {
+          btn.disabled = true;
+          btn.textContent = 'Download unlocked';
+        }
+      }).catch(function () {
+        // Even if Formspree fails, still show the link
+        linkP.style.display = 'block';
+      });
+    });
+  })();
+</script>
 </body>
 </html>
-
