--- a/index.html
+++ b/index.html
@@ -523,7 +523,7 @@ section.catalog h2{max-width:1100px; margin:10px auto 12px; padding:0 4px;}
       </div>
     </div>
   </div>
-    
+   </section> 
     <div class="card">
         <h3>AP Round Numbers Grid (MT5)</h3>
         <div class="tags"><span class="tag">Indicator</span><span class="tag">Levels</span></div>
