--- a/AP_London_Breakout_PRO/index.html
+++ b/AP_London_Breakout_PRO/index.html
@@ -57,7 +57,7 @@
     <div class="btns">
       <!-- Replace STRIPE_CHECKOUT_URL with your real Stripe payment link -->
       <a class="btn"
-         href="https://buy.stripe.com/STRIPE_CHECKOUT_URL"
+         href="https://buy.stripe.com/dRm5kF9e858n4efgifdjO06"
          target="_blank" rel="noopener">
         Buy Now (MT5)
       </a>
