--- a/index.html
+++ b/index.html
@@ -302,51 +302,58 @@ section.catalog h2{max-width:1100px; margin:10px auto 12px; padding:0 4px;}
   </div>
 </section>
 
-<section id="sessions-london" class="catalog">
+  <section id="sessions-london" class="catalog">
   <h2>London EAs</h2>
   <div class="grid3">
-  <div class="card">
-  <h3>AP London Breakout PRO</h3>
-  <div class="tags">
-    <span class="tag">Breakout</span><span class="tag">London</span>
-    <span class="tag">MT4</span><span class="tag">MT5</span>
+    <div class="card">
+      <h3>AP London Breakout PRO</h3>
+      <div class="tags">
+        <span class="tag">Breakout</span><span class="tag">London</span>
+        <span class="tag">MT4</span><span class="tag">MT5</span>
+      </div>
+      <p>
+        07:00–08:00 (server) box breakout via pending orders. SL at opposite side (+extra),
+        TP by R-multiple. One set per window, validator-safe gates.
+      </p>
+
+      <div class="btns">
+        <!-- Buy buttons (left) -->
+        <a class="btn btn-primary"
+           href="https://buy.stripe.com/dRm5kF9e858n4efgifdjO06"
+           target="_blank" rel="noopener">
+          Buy Now (MT5)
+        </a>
+
+        <a class="btn btn-primary"
+           href="https://aptradingtools.gumroad.com/l/htmxm"
+           target="_blank" rel="noopener">
+          Buy Now (MT4)
+        </a>
+
+        <!-- Docs buttons (right) -->
+        <a class="btn btn-ghost"
+           href="/AP_London_Breakout_PRO/"
+           target="_blank" rel="noopener">
+          Docs
+        </a>
+
+        <!-- placeholders to keep layout aligned -->
+        <span class="btn btn-ghost btn-placeholder" aria-hidden="true">__</span>
+        <span class="btn btn-ghost btn-placeholder" aria-hidden="true">__</span>
+        <span class="btn btn-ghost btn-placeholder" aria-hidden="true">__</span>
+        <span class="btn btn-ghost btn-placeholder" aria-hidden="true">__</span>
+        <span class="btn btn-ghost btn-placeholder" aria-hidden="true">__</span>
+        <span class="btn btn-ghost btn-placeholder" aria-hidden="true">__</span>
+
+        <span class="btn btn-ghost btn-placeholder" aria-hidden="true"></span>
+        <a class="btn btn-ghost"
+           href="/AP_London_Breakout_PRO/AP_London_Breakout_PRO_MT4/"
+           target="_blank" rel="noopener">
+          Docs MT4
+        </a>
+      </div>
+    </div>
   </div>
-  <p>
-    07:00–08:00 (server) box breakout via pending orders. SL at opposite side (+extra),
-    TP by R-multiple. One set per window, validator-safe gates.
-  </p>
-    
-  <div class="btns">
-  <!-- Buy buttons (left) -->
-  <a class="btn btn-primary"
-     href="https://aptradingtools.gumroad.com/l/mopapd" target="_blank" rel="noopener">
-    Buy Now (MT5)
-  </a>
-
-  <a class="btn btn-primary"
-    href="https://aptradingtools.gumroad.com/l/htmxm" target="_blank" rel="noopener">
-    Buy Now (MT4)
-  </a>
-
-
-  <!-- Docs buttons (right) -->
-<a class="btn btn-ghost" href="/AP_London_Breakout_PRO/" target="_blank" rel="noopener">
-  Docs 
-</a>
-
-<!-- three blank placeholders, same size as a Docs button -->
-<span class="btn btn-ghost btn-placeholder" aria-hidden="true">__</span>
-<span class="btn btn-ghost btn-placeholder" aria-hidden="true">__</span>
-<span class="btn btn-ghost btn-placeholder" aria-hidden="true">__</span>
-<span class="btn btn-ghost btn-placeholder" aria-hidden="true">__</span>
-<span class="btn btn-ghost btn-placeholder" aria-hidden="true">__</span>
-<span class="btn btn-ghost btn-placeholder" aria-hidden="true">__</span>
-<span class="btn btn-ghost btn-placeholder" aria-hidden="true"></span>
-<a class="btn btn-ghost" href="/AP_London_Breakout_PRO/AP_London_Breakout_PRO_MT4/" target="_blank" rel="noopener">
-  Docs MT4
-</a>
-</div>
-</div>
 </section>
 
 <section id="sessions-ny" class="catalog">
