--- a/index.html
+++ b/index.html
@@ -325,7 +325,7 @@ section.catalog h2{max-width:1100px; margin:10px auto 12px; padding:0 4px;}
         </a>
 
         <a class="btn btn-primary"
-           href="https://aptradingtools.gumroad.com/l/htmxm"
+           href="https://buy.stripe.com/eVq6oJ7607gvh11gifdjO07"
            target="_blank" rel="noopener">
           Buy Now (MT4)
         </a>
