--- a/AP_London_Breakout_PRO/AP_London_Breakout_PRO_MT4/index.html
+++ b/AP_London_Breakout_PRO/AP_London_Breakout_PRO_MT4/index.html
@@ -23,16 +23,16 @@ hr{border:none;border-top:1px solid #1d2633;margin:22px 0}
 </head>
 <body>
 <div class="wrap">
-  <a class="ghost btn" href="../">← Back to Home</a>
-  <h1>AP London Breakout PRO (MT4)</h1>
-  <p class="lead">London session box breakout for MetaTrader 4. Pending orders, validator-friendly gates, ATR-based SL/TP.</p>
-
   <div class="btns">
-    <a class="btn" href="https://aptradingtools.gumroad.com/l/htmxm" target="_blank" rel="noopener">Buy on Gumroad (MT4)</a>
-    <a class="ghost btn" href="Quick_Start_MT4.md" target="_blank" rel="noopener">Quick Start</a>
-    <a class="ghost btn" href="Inputs_Reference_MT4.md" target="_blank" rel="noopener">Inputs</a>
-    <a class="ghost btn" href="Version.txt" target="_blank" rel="noopener">Version</a>
-  </div>
+  <a class="btn"
+     href="https://buy.stripe.com/eVq6oJ7607gvh11gifdjO07"
+     target="_blank" rel="noopener">
+    Buy Now (MT4)
+  </a>
+  <a class="ghost btn" href="Quick_Start.md" target="_blank" rel="noopener">Quick Start</a>
+  <a class="ghost btn" href="Inputs_Reference_MT4.md" target="_blank" rel="noopener">Inputs</a>
+  <a class="ghost btn" href="Version.txt" target="_blank" rel="noopener">Version</a>
+</div>
 
   <!-- Optional: add presets later by uncommenting this block and adding .set files
   <h3>Presets (.set)</h3>
