--- a/index.html
+++ b/index.html
@@ -285,22 +285,29 @@ section.catalog h2{max-width:1100px; margin:10px auto 12px; padding:0 4px;}
   </div>
 </div>
     
-    <div class="card">
-        <h3>AP DayTrader Impulse Box (MT5)</h3>
-        <div class="tags">
-        <span class="tag">Momentum</span><span class="tag">Breakout</span><span class="tag">MT5</span>
-        </div>
-        <p>Two engines: Momentum Pullback (EMA/RSI) + Session Breakout (M5 box). ATR stops, BE & trailing, spread/stop guards.</p>
-        <div class="btns">
-          <a class="btn lemonsqueezy-button"
-          href="https://aptradingtools.lemonsqueezy.com/buy/a6895733-93a0-427b-9988-d65f924ddde6">
-          Buy Now (MT5)
-          </a>
-          <a class="btn ghost" href="./AP_DayTrader_Impulse_Box/" target="_blank" rel="noopener">Docs</a>
-        </div>
-      </div>
+   <div class="card">
+  <h3>AP DayTrader Impulse Box (MT5)</h3>
+  <div class="tags">
+    <span class="tag">Momentum</span><span class="tag">Breakout</span><span class="tag">MT5</span>
   </div>
-</section>
+  <p>
+    Two engines: Momentum Pullback (EMA/RSI) + Session Breakout (M5 box).
+    ATR stops, BE & trailing, spread/stop guards.
+  </p>
+  <div class="btns">
+    <a class="btn"
+       href="https://buy.stripe.com/14A00l1LG44jcKLaXVdjO08"
+       target="_blank" rel="noopener">
+      Buy Now (MT5)
+    </a>
+    <a class="btn ghost"
+       href="./AP_DayTrader_Impulse_Box/"
+       target="_blank" rel="noopener">
+      Docs
+    </a>
+  </div>
+</div>
+
 
   <section id="sessions-london" class="catalog">
   <h2>London EAs</h2>
