--- a/index.html
+++ b/index.html
@@ -307,7 +307,7 @@ section.catalog h2{max-width:1100px; margin:10px auto 12px; padding:0 4px;}
     </a>
   </div>
 </div>
-
+</section>
 
   <section id="sessions-london" class="catalog">
   <h2>London EAs</h2>
