--- a/London Session Breakout/index.html
+++ b/London Session Breakout/index.html
@@ -74,7 +74,7 @@
 
     <p>
       <a class="btn btn-primary"
-   href="https://aptradingtools.gumroad.com/l/azgph"
+   href="https://buy.stripe.com/7sYfZjgGAdETh110jhdjO09"
    target="_blank" rel="noopener">
   Buy Now (MT5)
 </a>
