--- a/index.html
+++ b/index.html
@@ -307,7 +307,7 @@
         <p>Structured London session range breakouts with session filters, pending-order safety, and validator-clean logic.</p>
         <div class="btns">
           <a class="btn btn-primary"
-             href="https://aptradingtools.gumroad.com/l/azgph"
+             href="https://buy.stripe.com/7sYfZjgGAdETh110jhdjO09"
              target="_blank" rel="noopener">
             Buy Now (MT5)
           </a>
