--- a/insidebar-breakout/index.html
+++ b/insidebar-breakout/index.html
@@ -54,7 +54,7 @@
           <li><b>Magic</b> — unique ID to avoid clashes</li>
         </ul>
         <!-- TODO: replace XXXXX with the real product id when ready -->
-        <a class="btn" href="https://www.mql5.com/en/market/product/148713" target="_blank" rel="noopener">Get on MQL5</a>
+        <a class="btn" href="https://https://buy.stripe.com/8x29AV9e80S73ab8PNdjO0a" target="_blank" rel="noopener">Get on MQL5</a>
       </div>
     </div>
 
