--- a/index.html
+++ b/index.html
@@ -325,7 +325,7 @@
         <p>Inside-bar detection with smart pending placement and automatic opposite-side cleanup after fills.</p>
         <div class="btns">
           <a class="btn btn-primary"
-             href="https://aptradingtools.gumroad.com/l/qtcoqn"
+             href="https://buy.stripe.com/8x29AV9e80S73ab8PNdjO0a"
              target="_blank" rel="noopener">
             Buy Now (MT5)
           </a>
