--- a/index.html
+++ b/index.html
@@ -412,7 +412,7 @@
         </div>
         <p>13:30–14:30 (server) box breakout via pending orders. SL at opposite side (+extra), TP by R-multiple. One set per window, validator-safe gates.</p>
         <div class="btns">
-          <a class="btn" href="https://www.mql5.com/en/market/product/148887" target="_blank" rel="noopener">Get on MQL5</a>
+          <a class="btn" href="https://buy.stripe.com/dRmeVf0HC6crdOPc1ZdjO0b" target="_blank" rel="noopener">Get on MQL5</a>
           <a class="btn ghost" href="./AP_NY_Breakout_PRO/" target="_blank" rel="noopener">Docs</a>
         </div>
       </div>
