--- a/AP_NY_Breakout_PRO/index.html
+++ b/AP_NY_Breakout_PRO/index.html
@@ -40,7 +40,7 @@
     <p class="muted">13:30–14:30 (server) session box breakout via pending orders. SL at opposite side (+extra), TP by R-multiple. One set per window, validator-friendly gates.</p>
 
     <div class="pillbar">
-      <a class="pill" href="https://www.mql5.com/en/market/product/148887" target="_blank" rel="noopener">Get on MQL5</a>
+      <a class="pill" href="https://buy.stripe.com/dRmeVf0HC6crdOPc1ZdjO0b" target="_blank" rel="noopener">Get on MQL5</a>
       <a class="pill ghost" href="./Quick%20Start.md" target="_blank" rel="noopener">Quick Start</a>
       <a class="pill ghost" href="#inputs">Inputs</a>
       <a class="pill ghost" href="#presets">Preset (.set)</a>
