--- a/index.html
+++ b/index.html
@@ -428,7 +428,7 @@
         <div class="tags"><span class="tag">EA</span><span class="tag">Time-box</span></div>
         <p>Asian session time-box breakout with configurable hours, buffered pending orders, and optional trend filter.</p>
         <div class="btns">
-          <a class="btn" href="https://www.mql5.com/en/market/product/148555" target="_blank" rel="noopener">Get on MQL5</a>
+          <a class="btn" href="https://buy.stripe.com/8x2fZjcqk7gv2677LJdjO0c" target="_blank" rel="noopener">Get on MQL5</a>
           <a class="btn ghost" href="./Asian%20Breakout%20Box/" target="_blank" rel="noopener">Docs</a>
         </div>
       </div>
