--- a/index.html
+++ b/index.html
@@ -412,7 +412,7 @@
         </div>
         <p>13:30–14:30 (server) box breakout via pending orders. SL at opposite side (+extra), TP by R-multiple. One set per window, validator-safe gates.</p>
         <div class="btns">
-          <a class="btn" href="https://buy.stripe.com/dRmeVf0HC6crdOPc1ZdjO0b" target="_blank" rel="noopener">Get on MQL5</a>
+          <a class="btn" href="https://buy.stripe.com/dRmeVf0HC6crdOPc1ZdjO0b" target="_blank" rel="noopener">Buy Now MT5</a>
           <a class="btn ghost" href="./AP_NY_Breakout_PRO/" target="_blank" rel="noopener">Docs</a>
         </div>
       </div>
@@ -428,7 +428,7 @@
         <div class="tags"><span class="tag">EA</span><span class="tag">Time-box</span></div>
         <p>Asian session time-box breakout with configurable hours, buffered pending orders, and optional trend filter.</p>
         <div class="btns">
-          <a class="btn" href="https://buy.stripe.com/8x2fZjcqk7gv2677LJdjO0c" target="_blank" rel="noopener">Get on MQL5</a>
+          <a class="btn" href="https://buy.stripe.com/8x2fZjcqk7gv2677LJdjO0c" target="_blank" rel="noopener">Buy Now MT5</a>
           <a class="btn ghost" href="./Asian%20Breakout%20Box/" target="_blank" rel="noopener">Docs</a>
         </div>
       </div>
@@ -476,7 +476,7 @@
         <div class="tags"><span class="tag">EA</span><span class="tag">BTC</span></div>
         <p>Short-only breakdown with retest entries, volume gate, EMA trend filter, and spread/ATR guards.</p>
         <div class="btns">
-          <a class="btn" href="https://www.mql5.com/en/market/product/148490" target="_blank" rel="noopener">Get on MQL5</a>
+          <a class="btn" href="https://www.mql5.com/en/market/product/148490" target="_blank" rel="noopener">Buy Now MT5</a>
           <a class="btn ghost" href="./btc-breakdown.html" target="_blank" rel="noopener">Docs</a>
         </div>
       </div>
@@ -582,7 +582,7 @@
         </div>
         <p>Round-number grid by points with optional half/quarter levels. Non-trading, fast, and tidy.</p>
         <div class="btns">
-          <a class="btn" href="https://www.mql5.com/en/market/product/148903" target="_blank" rel="noopener">Get on MQL5</a>
+          <a class="btn" href="https://www.mql5.com/en/market/product/148903" target="_blank" rel="noopener">Buy Now MT5</a>
           <a class="btn ghost" href="./AP%20Round%20Numbers%20Grid%20MT5/" target="_blank" rel="noopener">Docs</a>
         </div>
       </div>
@@ -762,7 +762,7 @@
         <div class="tags"><span class="tag">EA</span><span class="tag">Range</span></div>
         <p>Previous-day range breakout with buffered pending orders and built-in safety checks.</p>
         <div class="btns">
-          <a class="btn" href="https://www.mql5.com/en/market/product/148688" target="_blank" rel="noopener">Get on MQL5</a>
+          <a class="btn" href="https://www.mql5.com/en/market/product/148688" target="_blank" rel="noopener">Buy Now MT5</a>
           <a class="btn ghost" href="./AP%20Previous%20Day%20Breakout/" target="_blank" rel="noopener">Docs</a>
         </div>
       </div>
