--- a/Asian Breakout Box/index.html
+++ b/Asian Breakout Box/index.html
@@ -24,7 +24,7 @@ footer{color:var(--muted);text-align:center;padding:28px}
 
     <div class="btns">
       <!-- Replace XXXXXX with the actual product ID -->
-      <a class="btn" href="https://buy.stripe.com/8x2fZjcqk7gv2677LJdjO0c" target="_blank" rel="noopener">Get on MQL5</a>
+      <a class="btn" href="https://buy.stripe.com/8x2fZjcqk7gv2677LJdjO0c" target="_blank" rel="noopener">Buy Now MT5</a>
       <a class="ghost btn" href="/" rel="noopener">⬅ Back to Home</a>
     </div>
 
