--- a/index.html
+++ b/index.html
@@ -476,7 +476,7 @@
         <div class="tags"><span class="tag">EA</span><span class="tag">BTC</span></div>
         <p>Short-only breakdown with retest entries, volume gate, EMA trend filter, and spread/ATR guards.</p>
         <div class="btns">
-          <a class="btn" href="https://www.mql5.com/en/market/product/148490" target="_blank" rel="noopener">Buy Now MT5</a>
+          <a class="btn" href="https://buy.stripe.com/7sY7sNduocAPfWX5DBdjO0d" target="_blank" rel="noopener">Buy Now MT5</a>
           <a class="btn ghost" href="./btc-breakdown.html" target="_blank" rel="noopener">Docs</a>
         </div>
       </div>
