--- a/index.html
+++ b/index.html
@@ -515,7 +515,7 @@
         </p>
         <div class="btns">
           <a class="btn"
-             href="https://aptradingtools.lemonsqueezy.com/buy/YOUR_METALS_LINK"
+             href="https://buy.stripe.com/eVqcN7fCwasH4ef6HFdjO0e"
              data-ls-modal="buy" rel="noopener">Buy Now (MT5)</a>
           <a class="btn ghost" href="./AP_Metals_London_Breakout_PRO/" rel="noopener">Docs</a>
         </div>
