--- a/AP_Metals_London_Breakout_PRO_MT5/index.html
+++ b/AP_Metals_London_Breakout_PRO_MT5/index.html
@@ -33,7 +33,7 @@ ul{margin:0 0 0 18px}
     <a class="pill" href="./Inputs.md">Inputs</a>
     <a class="pill" href="./presets/">Presets (.set)</a>
     <a class="pill" href="./Changelog.md">Version / Changelog</a>
-    <a class="pill" href="#" title="Add the MQL5 link here">Get on MQL5</a>
+    <a class="pill" href="#" title="https://buy.stripe.com/eVqcN7fCwasH4ef6HFdjO0e">Buy Now MT5</a>
   </div>
 
   <h2>Launch offer</h2>
