--- a/index.html
+++ b/index.html
@@ -692,9 +692,9 @@
         <p>Compact trade manager with break-even, partials, and quick-close actions.</p>
         <div class="btns">
           <a class="btn"
-             href="https://www.mql5.com/en/market/product/148619"
+             href="https://buy.stripe.com/14AdRb760asH6mnfebdjO0f"
              target="_blank" rel="noopener">
-            Get on MQL5
+            Buy Now MT5
           </a>
           <a class="btn ghost"
              href="./AP%20Trade%20Manager/"
