--- a/AP Trade Manager/index.html
+++ b/AP Trade Manager/index.html
@@ -26,7 +26,7 @@ footer{color:var(--muted);text-align:center;padding:28px}
 
     <div class="btns">
       <!-- Replace XXXXXX with the real product ID you used on the homepage button -->
-      <a class="btn" href="https://www.mql5.com/en/market/product/148619" target="_blank" rel="noopener">Get on MQL5</a>
+      <a class="btn" href="https://buy.stripe.com/14AdRb760asH6mnfebdjO0f" target="_blank" rel="noopener">Buy Now MT5</a>
       <a class="ghost btn" href="/" rel="noopener">⬅ Back to Home</a>
     </div>
 
