--- a/index.html
+++ b/index.html
@@ -762,7 +762,7 @@
         <div class="tags"><span class="tag">EA</span><span class="tag">Range</span></div>
         <p>Previous-day range breakout with buffered pending orders and built-in safety checks.</p>
         <div class="btns">
-          <a class="btn" href="https://www.mql5.com/en/market/product/148688" target="_blank" rel="noopener">Buy Now MT5</a>
+          <a class="btn" href="https://buy.stripe.com/28E9AV0HC30f6mnaXVdjO0g" target="_blank" rel="noopener">Buy Now MT5</a>
           <a class="btn ghost" href="./AP%20Previous%20Day%20Breakout/" target="_blank" rel="noopener">Docs</a>
         </div>
       </div>
