--- a/AP Previous Day Breakout/index.html
+++ b/AP Previous Day Breakout/index.html
@@ -24,7 +24,7 @@ footer{color:var(--muted);text-align:center;padding:28px}
 
     <div class="btns">
       <!-- Replace XXXXXX with the actual product ID you used on the homepage button -->
-      <a class="btn" href="https://www.mql5.com/en/market/product/148688" target="_blank" rel="noopener">Get on MQL5</a>
+      <a class="btn" href="https://buy.stripe.com/28E9AV0HC30f6mnaXVdjO0g" target="_blank" rel="noopener">Buy Now MT5</a>
       <a class="ghost btn" href="/" rel="noopener">⬅ Back to Home</a>
     </div>
 
