--- a/index.html
+++ b/index.html
@@ -546,17 +546,32 @@
   <section id="indicators" class="catalog">
     <h2>Indicators</h2>
     <div class="grid3">
-      <div class="card">
-        <h3>AP Session Boxes</h3>
-        <div class="tags">
-          <span class="tag">Indicator</span><span class="tag">Sessions</span>
-        </div>
-        <p>Clean London/NY/Asia session boxes with custom times, opacity, and lookback. Great for screenshots.</p>
-        <div class="btns">
-          <a class="btn" href="https://www.mql5.com/en/market/product/148712" target="_blank" rel="noopener">Download</a>
-          <a class="btn ghost" href="./AP_Session_Boxes/" target="_blank" rel="noopener">Docs</a>
-        </div>
-      </div>
+  <div class="card">
+    <h3>AP Session Boxes</h3>
+    <div class="tags">
+      <span class="tag">Indicator</span><span class="tag">Sessions</span>
+    </div>
+    <p>
+      Clean London/NY/Asia session boxes with custom times, opacity, and lookback.
+      Great for screenshots.
+    </p>
+    <div class="btns">
+      <a class="btn"
+         href="./AP_Session_Boxes/"
+         target="_blank"
+         rel="noopener">
+        Download Free (MT5)
+      </a>
+      <a class="btn ghost"
+         href="./AP_Session_Boxes/"
+         target="_blank"
+         rel="noopener">
+        Docs
+      </a>
+    </div>
+  </div>
+</div>
+
 
       <div class="card">
         <h3>AP BTC Spread Radar MT5</h3>
