--- a/AP Round Numbers Grid MT5/index.html
+++ b/AP Round Numbers Grid MT5/index.html
@@ -5,21 +5,68 @@
 <meta name="viewport" content="width=device-width,initial-scale=1" />
 <title>AP Round Numbers Grid (MT5) — Docs</title>
 <style>
-:root{--bg:#0b0f14;--card:#121822;--text:#e8eef6;--muted:#9fb0c3;--accent:#58a6ff;}
+:root{
+  --bg:#0b0f14;
+  --card:#121822;
+  --text:#e8eef6;
+  --muted:#9fb0c3;
+  --accent:#58a6ff;
+}
 *{box-sizing:border-box}
-body{margin:0;background:var(--bg);color:var(--text);font:16px/1.6 system-ui,-apple-system,Segoe UI,Roboto,Arial}
+body{
+  margin:0;
+  background:var(--bg);
+  color:var(--text);
+  font:16px/1.6 system-ui,-apple-system,Segoe UI,Roboto,Arial;
+}
 .wrap{max-width:900px;margin:0 auto;padding:22px}
 h1{margin:12px 0 6px;font-size:28px}
 .lead{color:var(--muted);margin:0 0 16px}
-.card{background:var(--card);border:1px solid #1d2633;border-radius:14px;padding:18px;margin:16px 0}
+.card{
+  background:var(--card);
+  border:1px solid #1d2633;
+  border-radius:14px;
+  padding:18px;
+  margin:16px 0;
+}
 .btns{display:flex;gap:10px;flex-wrap:wrap;margin:12px 0}
-a.btn{display:inline-block;text-decoration:none;color:#000;background:var(--accent);padding:8px 12px;border-radius:10px;font-weight:600}
-a.ghost{background:transparent;color:var(--accent);border:1px solid var(--accent)}
+a.btn{
+  display:inline-block;
+  text-decoration:none;
+  color:#000;
+  background:var(--accent);
+  padding:8px 12px;
+  border-radius:10px;
+  font-weight:600;
+  border:none;
+}
+a.ghost{
+  background:transparent;
+  color:var(--accent);
+  border:1px solid var(--accent);
+}
 img{max-width:100%;border-radius:10px;border:1px solid #1d2633}
-ul{margin:8px 0 0 18px}
+ul,ol{margin:8px 0 0 18px}
 small,.muted{color:var(--muted)}
 hr{border:none;border-top:1px solid #1d2633;margin:22px 0}
-code{background:#0e141d;border:1px solid #1d2633;border-radius:6px;padding:1px 4px}
+code{
+  background:#0e141d;
+  border:1px solid #1d2633;
+  border-radius:6px;
+  padding:1px 4px;
+}
+label{display:block;margin-bottom:6px;font-size:14px;color:var(--muted);}
+input[type="email"]{
+  width:100%;
+  max-width:320px;
+  padding:8px 10px;
+  border-radius:8px;
+  border:1px solid #1d2633;
+  background:#0e141d;
+  color:var(--text);
+  margin-bottom:10px;
+}
+form small{font-size:12px;}
 </style>
 </head>
 <body>
@@ -28,11 +75,26 @@ code{background:#0e141d;border:1px solid #1d2633;border-radius:6px;padding:1px 4
   <h1>AP Round Numbers Grid (MT5)</h1>
   <p class="lead">Draws a round-number grid by step (points), with optional half/quarter levels. Non-trading and validator-safe.</p>
 
-  <div class="btns">
-    <!-- Replace the product ID below with the real one -->
-    <a class="btn" href="https://www.mql5.com/en/market/product/148903" target="_blank" rel="noopener">Get on MQL5</a>
-    <a class="ghost btn" href="Quick_Start.md" target="_blank" rel="noopener">Quick Start</a>
-    <a class="ghost btn" href="Pinned_Comment.txt" target="_blank" rel="noopener">Pinned Comment</a>
+  <!-- EMAIL + DOWNLOAD CARD -->
+  <div class="card">
+    <h3>Get the download</h3>
+    <form id="download-form"
+          action="https://formspree.io/f/xkgkrzye"
+          method="POST">
+      <label for="email">
+        Enter your email to get the .zip download:
+      </label>
+      <input id="email" name="email" type="email" required placeholder="you@example.com" />
+      <!-- optional extra fields -->
+      <input type="hidden" name="product" value="AP Round Numbers Grid (MT5)">
+      <div class="btns">
+        <button class="btn" type="submit">Download Free (MT5)</button>
+      </div>
+      <small class="muted">
+        We’ll log your email via Formspree and then start a direct download of
+        <code>AP_Round_Numbers_Grid_MT5.zip</code>. No extra pages.
+      </small>
+    </form>
   </div>
 
   <div class="card">
@@ -83,11 +145,38 @@ code{background:#0e141d;border:1px solid #1d2633;border-radius:6px;padding:1px 4
       <li><code>Version.txt</code> — version tag</li>
       <li><code>AP_Round_Numbers_Grid_Default.set</code> — sample preset</li>
       <li>PNG screenshots shown above</li>
+      <li><code>AP_Round_Numbers_Grid_MT5.zip</code> — indicator + presets (downloaded via the form)</li>
     </ul>
   </div>
 
   <hr />
   <p class="muted">Support via MQL5 messages/comments only. No profit promises or external links.</p>
 </div>
+
+<script>
+  (function () {
+    const form = document.getElementById('download-form');
+    if (!form) return;
+
+    form.addEventListener('submit', async function (e) {
+      e.preventDefault();
+
+      const data = new FormData(form);
+
+      try {
+        await fetch(form.action, {
+          method: 'POST',
+          body: data,
+          headers: { 'Accept': 'application/json' }
+        });
+      } catch (err) {
+        // ignore errors – still give the download
+      }
+
+      // Trigger the zip download (same folder as this index.html)
+      window.location.href = 'AP_Round_Numbers_Grid_MT5.zip';
+    });
+  })();
+</script>
 </body>
 </html>
