--- a/AP Round Numbers Grid MT5/index.html
+++ b/AP Round Numbers Grid MT5/index.html
@@ -30,21 +30,29 @@ h1{margin:12px 0 6px;font-size:28px}
   margin:16px 0;
 }
 .btns{display:flex;gap:10px;flex-wrap:wrap;margin:12px 0}
-a.btn{
+
+/* unified button style (same blue as Session Boxes) */
+.btn{
   display:inline-block;
-  text-decoration:none;
-  color:#000;
-  background:var(--accent);
   padding:8px 12px;
   border-radius:10px;
   font-weight:600;
+  background:var(--accent);
+  color:#000;
+  text-decoration:none;
   border:none;
+  cursor:pointer;
 }
+.btn:hover{filter:brightness(1.05);}
+
+/* ghost buttons (Back to Home etc.) */
+.btn.ghost,
 a.ghost{
   background:transparent;
   color:var(--accent);
   border:1px solid var(--accent);
 }
+
 img{max-width:100%;border-radius:10px;border:1px solid #1d2633}
 ul,ol{margin:8px 0 0 18px}
 small,.muted{color:var(--muted)}
@@ -85,13 +93,11 @@ form small{font-size:12px;}
         Enter your email to get the .zip download:
       </label>
       <input id="email" name="email" type="email" required placeholder="you@example.com" />
-      <!-- optional extra fields -->
       <input type="hidden" name="product" value="AP Round Numbers Grid (MT5)">
       <div class="btns">
         <button class="btn" type="submit">Download Free (MT5)</button>
       </div>
-      <small class="muted">
-      </small>
+      <small class="muted"></small>
     </form>
   </div>
 
